--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -433,6 +433,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Contents"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="contentsMenuItemActionPerformed"/>
+              </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="_context.getHelpManager ().initialize (contentsMenuItem);"/>
               </AuxValues>
@@ -747,7 +750,7 @@
                                 <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="valuesTableMousePressed"/>
                               </Events>
                               <AuxValues>
-                                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="&#xa;valuesTable.setDefaultRenderer (Object.class, new SearchRenderer (this._matcher, new DefaultTableCellRenderer () {&#xa;&#x9;public Component getTableCellRendererComponent(JTable table, Object value,&#xa;&#x9;&#x9;boolean isSelected, boolean hasFocus, int row, int column) {&#xa;&#xa;&#x9;&#x9;final JLabel label = (JLabel)super.getTableCellRendererComponent (table, value, isSelected, hasFocus, row, column);&#xa;&#x9;&#x9;if (0 == column) {&#xa;&#x9;&#x9;&#x9;// colonna chiavi &#xa;&#x9;&#x9;&#x9;label.setFont (label.getFont ().deriveFont (Font.BOLD));&#xa;&#x9;&#x9;&#x9;label.setBackground (keyBackgroundColor);&#xa;&#x9;&#x9;&#x9;label.setForeground (keyForegroundColor);&#xa;&#x9;&#x9;} else {&#xa;&#x9;&#x9;&#x9;label.setFont (label.getFont ().deriveFont (Font.PLAIN));&#xa;&#x9;&#x9;&#x9;if (null==value) {&#xa;&#x9;&#x9;&#x9;&#x9;label.setBackground (inactiveCaptionColor);&#xa;&#x9;&#x9;&#x9;} else {&#xa;&#x9;&#x9;&#x9;&#x9;label.setBackground (tableBackgroundColor);&#xa;&#x9;&#x9;&#x9;}&#xa;&#x9;&#x9;&#x9;label.setForeground (valueForegroundColor);&#xa;&#x9;&#x9;}&#xa;&#x9;&#x9;return label;&#xa;&#x9;}&#xa;&#x9;&#xa;}));&#xa;&#xa;&#xa;valuesTable.setDefaultEditor (String.class, new ValueCellEditor ());&#xa;&#xa;/*&#xa; * editor (shortcut per cancellazione&#xa; */&#xa;valuesTable.addKeyListener (new KeyAdapter (){&#xa;&#x9; public void keyPressed(KeyEvent e) {&#xa;&#x9;&#x9; if (e.isControlDown ()){&#xa;&#x9;&#x9;&#x9; if (e.getKeyCode ()==KeyEvent.VK_DELETE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (null, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; } else if (e.getKeyCode ()==KeyEvent.VK_SPACE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (&quot;&quot;, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9; }&#xa;&#x9; }&#xa;});&#xa;&#xa;javax.help.CSH.setHelpIDString (valuesTable, _context.getHelpManager ().getResolver ().resolveHelpID (HelpResources.VALUES_TABLE ));"/>
+                                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="&#xa;valuesTable.setDefaultRenderer (Object.class, new SearchRenderer (this._matcher, new DefaultTableCellRenderer () {&#xa;&#x9;public Component getTableCellRendererComponent(JTable table, Object value,&#xa;&#x9;&#x9;boolean isSelected, boolean hasFocus, int row, int column) {&#xa;&#xa;&#x9;&#x9;final JLabel label = (JLabel)super.getTableCellRendererComponent (table, value, isSelected, hasFocus, row, column);&#xa;&#x9;&#x9;final int modelColumn = valuesTable.convertColumnIndexToModel (column);&#xa;&#x9;&#x9;if (0 == modelColumn) {&#xa;&#x9;&#x9;&#x9;// colonna chiavi &#xa;&#x9;&#x9;&#x9;label.setFont (label.getFont ().deriveFont (Font.BOLD));&#xa;&#x9;&#x9;&#x9;label.setBackground (keyBackgroundColor);&#xa;&#x9;&#x9;&#x9;label.setForeground (keyForegroundColor);&#xa;&#x9;&#x9;} else {&#xa;&#x9;&#x9;&#x9;label.setFont (label.getFont ().deriveFont (Font.PLAIN));&#xa;&#x9;&#x9;&#x9;if (null==value) {&#xa;&#x9;&#x9;&#x9;&#x9;label.setBackground (inactiveCaptionColor);&#xa;&#x9;&#x9;&#x9;} else {&#xa;&#x9;&#x9;&#x9;&#x9;label.setBackground (tableBackgroundColor);&#xa;&#x9;&#x9;&#x9;}&#xa;&#x9;&#x9;&#x9;label.setForeground (valueForegroundColor);&#xa;&#x9;&#x9;}&#xa;&#x9;&#x9;return label;&#xa;&#x9;}&#xa;&#x9;&#xa;}));&#xa;&#xa;&#xa;valuesTable.setDefaultEditor (String.class, new ValueCellEditor ());&#xa;&#xa;/*&#xa; * editor (shortcut per cancellazione&#xa; */&#xa;valuesTable.addKeyListener (new KeyAdapter (){&#xa;&#x9; public void keyPressed(KeyEvent e) {&#xa;&#x9;&#x9; if (e.isControlDown ()){&#xa;&#x9;&#x9;&#x9; if (e.getKeyCode ()==KeyEvent.VK_DELETE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (null, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; } else if (e.getKeyCode ()==KeyEvent.VK_SPACE){&#xa;&#x9;&#x9;&#x9;&#x9; int rowIdx = valuesTable.getSelectedRow ();&#xa;&#x9;&#x9;&#x9;&#x9; int colIdx = valuesTable.getSelectedColumn ();&#xa;&#x9;&#x9;&#x9;&#x9; if (colIdx&gt;0 &amp;&amp; rowIdx&gt;=0){&#xa;&#x9;&#x9;&#x9;&#x9;&#x9; //barbatrucco per evitare editazione spuria&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;//valuesTable.editCellAt(rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;valuesTable.setValueAt (&quot;&quot;, rowIdx, colIdx);&#xa;&#x9;&#x9;&#x9;&#x9;&#x9;e.consume ();&#xa;&#x9;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9;&#x9; }&#xa;&#x9;&#x9; }&#xa;&#x9; }&#xa;});&#xa;&#xa;javax.help.CSH.setHelpIDString (valuesTable, _context.getHelpManager ().getResolver ().resolveHelpID (HelpResources.VALUES_TABLE ));"/>
                                 <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new JXTable (this._localizationTableModel);"/>
                               </AuxValues>
                             </Component>
@@ -1036,7 +1039,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1066,7 +1069,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1096,7 +1099,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1126,7 +1129,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1167,7 +1170,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1195,7 +1198,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1223,7 +1226,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1251,7 +1254,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1282,7 +1285,7 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
@@ -1313,13 +1316,27 @@
                       <Dimension value="[22, 22]"/>
                     </Property>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[22, 22]"/>
+                      <Dimension value="[30, 30]"/>
                     </Property>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
                   <AuxValues>
                     <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
                     <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/* mantiene nascosto il testo  dell&apos;action */&#xa;redoButton.setText (null);&#xa;redoButton.putClientProperty (&quot;hideActionText&quot;, Boolean.TRUE);"/>
+                  </AuxValues>
+                </Component>
+                <Component class="javax.swing.JButton" name="helpButton">
+                  <Properties>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.openide.explorer.propertysheet.editors.IconEditor">
+                      <Image iconType="3" name="/com/davidecavestro/rbe/gui/images/contents.png"/>
+                    </Property>
+                    <Property name="borderPainted" type="boolean" value="false"/>
+                    <Property name="opaque" type="boolean" value="false"/>
+                  </Properties>
+                  <AuxValues>
+                    <AuxValue name="generateMnemonicsCode" type="java.lang.Boolean" value="true"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="/* mantiene nascosto il testo  dell&apos;action */&#xa;redoButton.setText (null);&#xa;redoButton.putClientProperty (&quot;hideActionText&quot;, Boolean.TRUE);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="_context.getHelpManager ().initialize (helpButton);"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
