--- a/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
+++ b/swdev/resourcebundleeditor/src/java/com/davidecavestro/rbe/gui/MainWindow.form
@@ -1035,7 +1035,9 @@
                             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                               <Connection code="keyForegroundColor" type="code"/>
                             </Property>
-                            <Property name="toolTipText" type="java.lang.String" value="KEY currentKeyFieldTooltip : RB com/davidecavestro/rbe/gui/res"/>
+                            <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
+                              <ResourceString bundle="com/davidecavestro/rbe/gui/res.properties" key="currentKeyFieldTooltip" replaceFormat="java.util.ResourceBundle.getBundle(&quot;{bundleNameDots}&quot;).getString(&quot;{key}&quot;)"/>
+                            </Property>
                             <Property name="opaque" type="boolean" value="false"/>
                           </Properties>
                           <Constraints>
